Update Docker build step in GitHub Actions workflow

--- a/.github/workflows/dani.yml
+++ b/.github/workflows/dani.yml
@@ -19,7 +19,11 @@ jobs:
 
        # 2. Pasul care construieste imaginea Docker
        - name: Build Docker Image
-         run: docker build -t my-app
+         uses: docker/build-push-action@v5
+         with:
+           context: .
+           push: false
+           tags: my-app:latest
         
    
      
